--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.vineethkamisetty</groupId>
     <artifactId>justweather-rest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>war</packaging>
     <build>
         <plugins>
